Cleaning up examples

--- a/src/templates/endevHelper.tpl.html
+++ b/src/templates/endevHelper.tpl.html
@@ -18,6 +18,10 @@
     margin-top:5px;
     display:block; 
   } 
+
+  .__endev_annotation_on__ tbody.__endev_annotated__ {
+    display: table-row-group;
+  }
   .__endev_annotation__ { 
     display: none; 
   }
