--- a/src/templates/endevHelper.tpl.html
+++ b/src/templates/endevHelper.tpl.html
@@ -56,4 +56,5 @@
 <div id="__endev_helper__">
   Endev Tools:
   <button ng-click="$endevAnnotation = !$endevAnnotation">Annotations {{$endevAnnotation ? 'off' : 'on'}}</button>
+  <span style="color:red">{{$endevErrors[$endevErrors.length-1].description}}</span>
 </div>
