--- a/src/templates/endevHelper.tpl.html
+++ b/src/templates/endevHelper.tpl.html
@@ -53,7 +53,7 @@
     margin-top: -1px; 
   }
 </style>
-<div id="__endev_helper__">
+<div id="__endev_helper__" ng-if="$endevShowHelper">
   Endev Tools:
   <button ng-click="$endevAnnotation = !$endevAnnotation">Annotations {{$endevAnnotation ? 'off' : 'on'}}</button>
   <span style="color:red">{{$endevErrors[$endevErrors.length-1].description}}</span>
