describe directive explain directive throttle the yql query calls adding nested elements for REST support for other Angular modules

--- a/src/templates/endevHelper.tpl.html
+++ b/src/templates/endevHelper.tpl.html
@@ -52,6 +52,24 @@
   table .__endev_annotated__ > .__endev_annotation__ { 
     margin-top: -1px; 
   }
+  ._endev_json_ {
+
+  }
+  ._endev_json_number_ {
+    color: forestgreen;
+  }
+  ._endev_json_key_ {
+    color: darkorange;
+  }
+  ._endev_json_string_ {
+    color: darkseagreen;
+  }
+  ._endev_json_boolean_ {
+    color: green;
+  }
+  ._endev_json_null_ {
+    color: dimgray;
+  }
 </style>
 <div id="__endev_helper__" ng-if="$endevShowHelper">
   Endev Tools:
